--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
           <span class="right-tail"></span>
         </span>
         <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <p>Hi sexy</p>
         <span class="octocat"></span>
       </footer>
 
